--- a/glow.css
+++ b/glow.css
@@ -9,9 +9,15 @@ body{
     margin: 0;
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
     background-color: #010615;
+    
+}
+a{
+    color: #fff;
+    text-decoration: none;
 }
 .box{
     position: relative;
