--- a/glow.css
+++ b/glow.css
@@ -22,9 +22,13 @@ a{
     border-radius: 20px;
     color: #fff;
     background: linear-gradient(230deg,#0100e9,rgb(113, 0, 128));
+    margin: 2rem;
 }
 a:hover{
     background: rgb(113, 0, 128);
+}
+.ad{
+    width: 100%;
 }
 .box{
     position: relative;
